# fullcontrol

./: .gitignore  CODE_REVIEW.md  IMPROVEMENT_PLAN.md  pyproject.toml  wrangler.toml
.github/workflows/: ci.yml
docs/: architecture.md  design_ideas.md  features.md  fullcontrol_xyz_catalogue.md  gallery.md  gcode_engine_plan.md  ir_prior_art.md  ir_spec.md  readme.md
docs/rewrite/: 00-vision-and-scope.md  01-architecture.md  02-roadmap.md  03-conformance.md  04-tasks.md  README.md
examples/: __init__.py  arc_vase.py  bead_studs.py  blob_printing.py  brush_lettering.py  fractional_design_engine.py  freeform_frosting.py  gyroid_infill.py  helical_screw.py  hex_adapter.py  lampshade.py  mobius_band.py  nonplanar_spacer.py  nuts_and_bolts.py  optimization_demo.py  overhang_challenge.py  phone_stand.py  pin_support_challenge.py  print_time_study.py  retraction_test.py  reverse_engineer.py  ripple_vase.py  snake_lattice.py  snake_soapdish.py  spiral_vase.py  star_polygon_lattice.py  surface_texture.py  tape_reinforcement.py  trefoil_tube.py  twisted_polygon_vase.py  validation_gauntlet.py  wave_bowl.py
fullcontrol/: __init__.py  auxilliary_components.py  base.py  check.py  common.py  extra_functions.py  extrusion_classes.py  point.py  printer.py
fullcontrol/combinations/gcode_and_visualize/: backends.py  classes.py  common.py
fullcontrol/core/: __init__.py  arc.py  auxilliary_components.py  base.py  check.py  common.py  extra_functions.py  extrusion_classes.py  point.py  printer.py
fullcontrol/devices/community/singletool/: _procedure.py  base_settings.py  cr_10.py  custom.py  ender_5_plus.py  generic.py  prusa_i3.py  prusa_mini.py  prusa_mk4.py  toolchanger_T1.py  toolchanger_T2.py  toolchanger_T3.py  ultimaker2plus.py  voron_zero.py  wasp2040clay.py
fullcontrol/gcode/: __init__.py  annotations.py  arc.py  auxilliary_components.py  commands.py  controls.py  dialect.py  extrusion_classes.py  flavor.py  import_printer.py  number_format.py  point.py  printer.py  renderers.py  state.py  steps2gcode.py
fullcontrol/gcode/primer_library/: no_primer.py
fullcontrol/gcode_engine/: __init__.py  __main__.py  cli.py  detector.py  optimiser.py  parser.py  public.py  verification.py
fullcontrol/gcode_engine/passes/: __init__.py  adaptive_speed.py  arc_fit.py  simplify.py  travel_reorder.py
fullcontrol/gcode_engine/rules/: __init__.py  _helpers.py  adhesion.py  extrusion.py  geometry.py  thermal.py  travel.py
fullcontrol/geometry/: __init__.py  arcs.py  measure.py  midpoint.py  move.py  move_polar.py  polar.py  reflect.py  segmentation.py  shapes.py  travel_to.py  vector.py  waves.py
fullcontrol/ir/: __init__.py  binary.py  columnar.py  invariants.py  kernel.py  passes.py  serialize.py  threemf.py  toolpath.py
fullcontrol/simulate/: __init__.py  renderers.py  result.py  run.py
fullcontrol/validate/: __init__.py  result.py  run.py
fullcontrol/visualize/: annotations.py  arc.py  bounding_box.py  controls.py  extrusion_classes.py  from_ir.py  mesh_export.py  path.py  plot_data.py  plotly.py  point.py  renderers.py  state.py  steps2visualization.py  threejs.py  tips.py  tube_mesh.py
lab/fullcontrol/: transform.py
lab/fullcontrol/controlcode_formats/: controls.py  steps2controlcode.py
lab/fullcontrol/geometry/: convex.py  offset_path.py  rotate.py  spherical.py
lab/fullcontrol/geometry_model/: controls.py
lab/fullcontrol/laser/: laser.py
lab/fullcontrol/multiaxis/combinations/gcode_and_visualize/XYZB/: common.py  xyz_add_b.py
lab/fullcontrol/multiaxis/combinations/gcode_and_visualize/XYZBC/: common.py  xyz_add_bc.py
lab/fullcontrol/multiaxis/combinations/gcode_and_visualize/XYZC0B1/: common.py
lab/fullcontrol/multiaxis/gcode/: _base.py  _driver.py  _renderers.py
lab/fullcontrol/multiaxis/gcode/XYZB/: controls.py  point.py  printer.py  state.py  steps2gcode.py
lab/fullcontrol/multiaxis/gcode/XYZBC/: controls.py  point.py  printer.py  state.py  steps2gcode.py
lab/fullcontrol/multiaxis/gcode/XYZC0B1/: controls.py  point.py  printer.py  state.py  steps2gcode.py
rust_kernel/: Cargo.toml  pyproject.toml
rust_kernel/src/: gcode.rs  lib.rs  metrics.rs  parser.rs  python_api.rs  walk.rs  wasm_api.rs
tests/: CICD_test.py  test_print_output_reference.txt
tests/unit/: test_acceleration.py  test_arcXY_3pt.py  test_arc_gcode.py  test_arc_vase.py  test_arc_visualize.py  test_architecture.py  test_backend_registry.py  test_bead_studs.py  test_blob_printing.py  test_brush_lettering.py  test_class_consistency.py  test_columnar.py  test_core_boundary.py  test_core_renderable.py  test_correctness_batch1.py  test_crash_guards.py  test_custom_device_extruder_mode.py  test_device_procedures.py  test_devices_and_utils.py  test_duet_flavor.py  test_edge_cases.py  test_examples.py  test_extruder_state_split.py  test_flavor_motion.py  test_fractional_design_engine.py  test_freeform_frosting.py  test_gcode_emission.py  test_gcode_engine_cli.py  test_gcode_flavor.py  test_gcode_no_scientific_notation.py  test_gcode_parser_rust.py  test_gcode_roundtrip.py  test_gcode_rust.py  test_geometry.py  test_geometry_in_core.py  test_golden_output.py  test_gyroid.py  test_hex_adapter.py  test_ir_binary.py  test_ir_invariants.py  (+37 more)
tests/unit/golden/: arcs.txt  aux.txt  basic.txt  basic_plot.txt  ender3.txt  geometry.txt  klipper.txt
ts/: README.md  package-lock.json  package.json  tsconfig.json
ts/fixtures/: spiral.ir.json  square.ir.json
ts/src/: designs.ts  fullcontrol.ts  generate_fixtures.ts
web/: README.md  _headers  _redirects  build.sh  designs.js  index.html  viewer.html
web/pkg/: fullcontrol_kernel.js  fullcontrol_kernel_bg.wasm
web/playground/: build-wheel.sh  fullcontrol-0.1.2-py3-none-any.whl  index.html
