[project]
name = "fullcontrol"
version = "0.1.2"
authors = [
    { name="Andy Gleadall", email="andy@fullcontrol.xyz" },
    { name="Dirk Leas", email="dirk@fullcontrol.xyz" },
]
description = "fullcontrol - unconstrained design"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "plotly>=5",
  "pydantic>=2,<3",
  "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=7"]
viz = ["kaleido"]            # plotly static image export (used by the tutorial test collage)
dev = ["pytest>=7", "kaleido", "pillow", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fullcontrol", "lab"]

[tool.ruff]
line-length = 120
target-version = "py310"
# Notebooks, generated device data, and tutorial dumps are not hand-maintained source.
extend-exclude = [
  "*.ipynb",
  "tutorials",
  "tests/combined_tutorials.py",
  "lab/incubator",
  "fullcontrol/devices/cura",
  "fullcontrol/devices/community_minimal",
]

[tool.ruff.lint]
# Real errors (pyflakes F, syntax/runtime E9), None/bool-literal comparisons (E711/E712),
# and modern-syntax enforcement (pyupgrade UP). Import sorting (I), unused-import noise in
# the generated device profiles (F401/F403/F405), and ambiguous names (E741) stay off for now.
select = ["E9", "F", "E711", "E712", "UP"]
ignore = ["F401", "F403", "F405", "E741"]

[project.urls]
"Homepage" = "https://fullcontrol.xyz"
"Repository" = "https://github.com/FullControlXYZ/fullcontrol"
"Documentation" = "https://github.com/FullControlXYZ/fullcontrol/tree/master/docs"
"Tutorials" = "https://github.com/FullControlXYZ/fullcontrol/tree/master/tutorials"
"Bug Tracker" = "https://github.com/FullControlXYZ/fullcontrol/issues"
