[package]
name = "fullcontrol_kernel"
version = "0.1.0"
edition = "2021"
description = "Rust computational microkernel for FullControl's columnar resolve (PoC)"

[lib]
name = "fullcontrol_kernel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"

[profile.release]
opt-level = 3
lto = true
